# yaydr

./: .clang_complete  .gitignore  CMakeLists.txt  README  README.md  index.html  main.cpp  params.json  yafaraydistribution.cbp  yafaraydistribution.depend  yafaraydistribution.layout
CMakeModules/: FindReadline.cmake  Findlibap2p.cmake  Findyafaray.cmake
include/: command_parser.h  configuration.h  file_compressor.h  log.h  node.h  node_manager.h  property_manager.h  render_manager.h  render_progress_manager.h  render_task.h  renderer.h  server.h  text_compressor.h
include/network/: network.hpp
include/node/: node.hpp
include/project/: image.hpp  project.hpp  project_manager.hpp
include/utils/yaydr-gui/project_manager/: edit_project_dialog.hpp  new_project_dialog.hpp  project_list_item_widget.hpp  project_manager_window.hpp
src/: CMakeLists.txt  command_parser.cpp  configuration.cpp  file_compressor.cpp  log.cpp  node.cpp  node_manager.cpp  property_manager.cpp  render_manager.cpp  render_progress_manager.cpp  render_task.cpp  renderer.cpp  server.cpp  text_compressor.cpp
src/network/: CMakeLists.txt  network.cpp
src/node/: CMakeLists.txt  node.cpp
src/project/: CMakeLists.txt  image.cpp  project.cpp  project_manager.cpp
src/utils/: CMakeLists.txt
src/utils/yaydr-cli/: CMakeLists.txt  commandrunner.cpp  commandrunner.hpp  main.cpp
src/utils/yaydr-gui/: CMakeLists.txt  main.cpp  projectmanagerwindow.cpp  resources.qrc
src/utils/yaydr-gui/include/: projectmanagerwindow.hpp
src/utils/yaydr-gui/project_manager/: CMakeLists.txt  edit_project_dialog.cpp  new_project_dialog.cpp  project_list_item_widget.cpp  project_manager_window.cpp
